# desktop-django-starter

./: .gitignore  .readthedocs.yml  AGENTS.md  CLAUDE.md  README.md  justfile  llms.txt  manage.py  pyproject.toml
.github/workflows/: ci.yml  desktop-packages.yml  tauri-packages.yml
cli/: README.md  hatch_build.py  pyproject.toml  sync_assets.py
cli/src/dds/: __init__.py  cli.py  config.py  doctor.py  wrap.py
cli/tests/: test_assets.py  test_wrap.py
docs/: Makefile  agent-use.md  architecture.md  backlog.md  conf.py  decisions.md  design-guide.md  done.md  index.md  llms.txt  make.bat  multi-shell-plan.md  release.md  requirements.txt  specification.md
docs/shells/: electron.md  positron.md  tauri.md
docs/superpowers/specs/: 2026-03-30-tasks-demo-frontend-design.md
electron/: electron-builder.config.cjs  main.js  package-lock.json  package.json  preload.cjs
electron/assets/icons/: app-icon.icns
electron/scripts/: bundled-python.cjs  electron-builder-config.cjs  electron-builder-config.test.cjs  generate-icons.cjs  launch-electron.cjs  materialize-symlinks.cjs  materialize-symlinks.test.cjs  stage-backend.cjs
scripts/: bench-wrap-local-models  bundled-python.cjs  check-github-release.py  prune-bundled-python-runtime.cjs  stage-backend.cjs  wrap  write-checksums.py
shells/electron/: main.js  package-lock.json  package.json
shells/electron/assets/icons/: app-icon.icns
shells/electron/scripts/: auth-token.cjs  auth-token.test.cjs  bundled-python.cjs  bundled-python.test.cjs  electron-builder-config.cjs  electron-builder-config.test.cjs  generate-icons.cjs  launch-electron.cjs  materialize-symlinks.cjs  process-exit-policy.cjs  process-exit-policy.test.cjs  updates.cjs  updates.test.cjs  window-guards.cjs  window-guards.test.cjs
shells/positron/: README.md  pyproject.toml
shells/positron/scripts/: generate-icons.py
shells/positron/src/desktop_django_starter_positron/: __init__.py  __main__.py  app.py  management.py  runtime.py
shells/tauri/: package-lock.json  package.json
shells/tauri/scripts/: build-tauri.mjs  launch-tauri.mjs
shells/tauri/src/: index.html  splash.html
shells/tauri/src-tauri/: Cargo.toml  tauri.conf.json
shells/tauri/src-tauri/capabilities/: default.json
shells/tauri/src-tauri/icons/: icon.icns
shells/tauri/src-tauri/src/: lib.rs  main.rs
skills/wrap-existing-django-in-electron/: SKILL.md  prompt.md  run-log.md
skills/wrap-existing-django-in-electron-staged/: SKILL.md  prompt-stage-2-electron.md  prompt-stage-3-django.md  prompt-stage-4-fix-from-failures.md  run-log.md
skills/wrap-existing-django-in-electron-staged/scripts/: prepare-django-desktop-scaffold.cjs  prepare-electron-scaffold.cjs  scaffold-target.sh
src/desktop_django_starter/: __init__.py  asgi.py  devtools.py  middleware.py  urls.py  wsgi.py
src/desktop_django_starter/settings/: __init__.py  base.py  local.py  packaged.py
src/desktop_django_starter/static/desktop_django_starter/: app.css
src/desktop_django_starter/templates/: base.html  splash.html
src/example_app/: __init__.py  demo_content.py  forms.py  models.py  urls.py  views.py
src/example_app/management/commands/: seed_demo_content.py
src/example_app/migrations/: 0001_initial.py  0002_democontentstate.py  __init__.py
src/example_app/templates/example_app/: item_confirm_delete.html  item_form.html  item_list.html
src/tasks_demo/: __init__.py  apps.py  models.py  tasks.py  urls.py  views.py  worker.py
src/tasks_demo/migrations/: 0001_initial.py  0002_simulatedtask_backend_task_id.py
src/tasks_demo/templates/tasks_demo/: task_list.html
tests/: test_bundled_runtime_contract.py  test_desktop_auth_token.py  test_devtools.py  test_docs.py  test_electron_shell.py  test_example_app.py  test_health.py  test_packaged_settings.py  test_packaged_static.py  test_packaging_helpers.py  test_positron_shell.py  test_tasks_demo.py  test_tauri_shell.py
