[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "desktop-django-starter"
version = "0.1.0"
description = "Specification-first starter for packaging Django inside Electron."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Jochen Wersdoerfer" },
]
dependencies = []

[project.urls]
Documentation = "https://desktop-django-starter.readthedocs.io/en/latest/"

[dependency-groups]
dev = [
    "furo>=2024.8.6",
    "myst-parser>=4.0.0",
    "pytest>=8.3",
    "ruff>=0.11.0",
    "sphinx>=8.2.0",
    "sphinx-autobuild>=2024.10.3",
    "sphinxcontrib-mermaid>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/desktop_django_starter"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
