[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "desktop-django-starter"
version = "0.1.0"
description = "Minimal starter for packaging Django inside Electron."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Jochen Wersdoerfer" },
]
dependencies = [
    "Django==6.0.3",
    "django-browser-reload>=1.21.0",
    "django-tasks==0.12.0",
    "django-tasks-db==0.12.0",
]

[project.scripts]
count-lines-of-code = "desktop_django_starter.devtools:count_lines_of_code"

[project.urls]
Documentation = "https://desktop-django-starter.readthedocs.io/en/latest/"

[dependency-groups]
dev = [
    "furo>=2024.8.6",
    "myst-parser>=4.0.0",
    "pytest>=8.3",
    "pytest-django>=4.11.1",
    "rich>=14.2.0",
    "ruff>=0.11.0",
    "sphinx>=8.2.0",
    "sphinx-autobuild>=2024.10.3",
    "sphinxcontrib-mermaid>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/desktop_django_starter", "src/example_app", "src/tasks_demo"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "desktop_django_starter.settings.local"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
    "docs/_build",
    ".stage",
    "shells/electron/.stage",
    "shells/electron/node_modules",
    "positron",
    "tauri",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
