[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "desktop-django-starter"
version = "0.1.2"
description = "Wrap any Django project in an Electron shell"
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Build Tools",
]

[project.scripts]
dds = "dds.cli:main"
desktop-django-starter = "dds.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dds"]

# hatch_build.py: fails both sdist and wheel builds if staged assets are
# missing.  Assets are staged into src/dds/_assets/ by the sync-assets script
# before building.  The _assets directory is gitignored; the canonical source
# files live at their normal repo locations.  See `just cli-sync-assets`.
[tool.hatch.build.targets.wheel.hooks.custom]
[tool.hatch.build.targets.sdist.hooks.custom]
