[package]
name = "desktop-django-starter-tauri"
version = "0.1.0"
description = "Experimental Tauri shell for desktop-django-starter."
authors = ["Desktop Django Starter contributors"]
edition = "2021"

[lib]
name = "desktop_django_starter_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.2", features = [] }

[dependencies]
getrandom = "0.3.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-single-instance = "2.4.0"
url = "2.5.7"
